--- a/Kattis_Cpp/Kattis_Cpp.vcxproj.filters
+++ b/Kattis_Cpp/Kattis_Cpp.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Continous_Median\Continous_Median.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Höfundaleit\Höfundaleit.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Ullen_Dullen_Doff_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Höfundaleit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Continous_Median.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
