completed firefly problem

--- a/Kattis_Cpp/Kattis_Cpp.vcxproj
+++ b/Kattis_Cpp/Kattis_Cpp.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="Continous_Median.cpp" />
     <ClCompile Include="Höfundaleit.cpp" />
+    <ClCompile Include="Firefly.cpp" />
     <ClCompile Include="Ullen_Dullen_Doff_2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
